--- a/src/Main/Main.scss
+++ b/src/Main/Main.scss
@@ -24,4 +24,5 @@ main {
   justify-content: space-around;
   overflow-y: scroll;
   width: 100%;
+  margin-bottom: 10em;
 }
